# vulndemo

easy/: easy_cpp提示词.md  easy_cs提示词.md  easy_c提示词.md  easy_dart提示词.md  easy_govulnweb提示词.md  easy_go提示词.md  easy_groovy提示词.md  easy_java提示词.md  easy_js提示词.md  easy_kotlin提示词.md  easy_php提示词.md  easy_python提示词.md  easy_ruby提示词.md  easy_rust提示词.md  easy_scala提示词.md  easy_ts提示词.md
easy/c/: build.bat  func_call.c  func_call.h  main.c
easy/cpp/: FuncCall.cpp  FuncCall.h  build.bat  main.cpp
easy/cs/: FuncCall.cs  Program.cs
easy/dart/: func_call.dart  main.dart
easy/go/: func_call.go  go.mod  main.go
easy/groovy/: FuncCall.groovy  Main.groovy
easy/java/: Application.java  FuncCall.java  Main.java
easy/js/: FuncCall.js  index.js
easy/kotlin/: FuncCall.kt  Main.kt
simple/: cppvulnweb漏洞代码提示词.md  csvulnweb漏洞代码提示词.md  cvulnweb漏洞代码提示词.md  dartvulnweb漏洞代码提示词.md  govulnweb漏洞代码提示词.md  groovyvulnweb漏洞代码提示词.md  javavulnweb漏洞代码提示词.md  jsvulnweb漏洞代码提示词.md  kotlinvulnweb漏洞代码提示词.md  phpvulnweb漏洞代码提示词.md  pythonvulnweb漏洞代码提示词.md  rubyvulnweb漏洞代码提示词.md  rustvulnweb漏洞代码提示词.md  scalavulnweb漏洞代码提示词.md
simple/cppvulnweb/: CMakeLists.txt  func_call.cpp  func_call.h  main.cpp
simple/cppvulnweb/cmd_exec/: interface_impl.cpp  sub_class_test.cpp
simple/cppvulnweb/code_exec/: interface_impl.cpp  sub_class_test.cpp
simple/cppvulnweb/common/: vuln_child.cpp  vuln_child.h  vuln_parent.cpp  vuln_parent.h
simple/cppvulnweb/interface/: vuln_interface.cpp  vuln_interface.h
simple/cppvulnweb/ssrf/: interface_impl.cpp  sub_class_test.cpp
simple/cppvulnweb/static/: index.html
(+262 files in other folders)
